word wrap fixed

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -60,7 +60,9 @@ body {
 	background-color: rgba(255, 255, 255, 0.45);
 	box-shadow: 0 0 20px white;
 	border-radius: 5px;
-	word-wrap: normal;
+	.media-body {
+		word-wrap: break-word;
+	}
 }
 .round {
 	border-radius: 20px;
